--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 yfinance==0.1.54
-pandas==1.2.1
+pandas==1.3.5
 tensorflow
 Keras==2.4.3
 numpy==1.19.5
 matplotlib==3.2.1
 streamlit==0.76.0
 scikit_learn==0.24.1
+click==8
